Update summary, education and awards

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,4 +6,4 @@
 - degree: Hon. BSc. Planetary Science and Physics
   uni: University of Toronto
   year: 2012 &mdash; 2017
-  summary: "Dating the lunar surface from space: insights from Optical Maturity and Rock Abundance"
+  summary: "Dating the lunar surface with remote sensing: insights from Optical Maturity and Rock Abundance."
