Update README and fix typos

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -6,8 +6,8 @@
 
 - award: NSERC Undergraduate Student Research Award
   year: 2016
-  summary: Awarded in support of independent undergraduate research on using Optical Maturity (OMAT) and Rock Abundance (RA) as age metrics for the lunar surface.
+  summary: Awarded in support of research in dating the lunar surface with remote sensing data.
 
 - award: Lunar and Planetary Institute (LPI) Summer Internship
   year: 2015
-  summary: Internship partnered with NASA JSC for undergraduate summer research on ithe formation of lunar swirls.
+  summary: Selective program partnered with NASA JSC [details](https://www.lpi.usra.edu/lpiintern/). Funded research with Dr. G. Y. Kramer to investigate the formation of lunar swirls.
