--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -10,4 +10,4 @@
 
 - award: Lunar and Planetary Institute (LPI) Summer Internship
   year: 2015
-  summary: Selective program partnered with NASA JSC [details](https://www.lpi.usra.edu/lpiintern/). Funded research with Dr. G. Y. Kramer to investigate the formation of lunar swirls.
+  summary: Selective program partnered with NASA JSC. Funded research with Dr. G. Y. Kramer to investigate the formation of lunar swirls.
