--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,8 +1,7 @@
 # Publications
 - title: 'Lunar crater ejecta: Physical properties revealed by radar and thermal infrared observations'
-  authors: 'Ghent, R. R. et al. including <b>Tai Udovicic, C. J.</b>'
+  authors: 'R.R. Ghent, L.M. Carter, J.L. Bandfield, <b>C.J. Tai Udovicic</b>, B.A. Campbell'
   journal: Icarus
   volume: 273
   year: 2016
-  pages: 182 &mdash; 195
-  issn: 0019 &mdash; 1035
+  pages: 182&ndash;195
