--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "C. J. Tai Udovicic CV"
-description: "Christian J. Tai Udovicic is a graduate researcher at Northern Arizona University."
+title: "Christian J. Tai Udovicic | Planetary Scientist"
+description: "Christian J. Tai Udovicic is a Ph.D. student at Northern Arizona University."
 
 # Build settings
 markdown: kramdown
@@ -16,7 +16,7 @@ resume_contact_email:           "cjt347@nau.edu"
 resume_contact_telephone:       "928-266-4451"
 resume_contact_address:         ""
 resume_header_contact_info:     ""
-resume_header_intro:            "<p>I am a planetary scienist in the Astronomy and Planetary Science PhD program at Northern Arizona University. My current research interests involve lunar surface processes, including space weathering, cratering, and the production and distribution of volatiles on the Moon. All inquiries can be addressed to <a style='color:#999;' href='mailto:cj.taiudovicic@gmail.com'>cj.taiudovicic@gmail.com</a>.</p>"
+resume_header_intro:            '<p>I use infrared imagery of the Moon to understand how its surface evolves over time. I am also passionate about reproducible research and recently developed <a href="https://cjtu.github.io/spirl">SpIRL</a>, a practical guide to Scientific Programming IRL.</p>'
 
 # Comment out unused sections
 # resume_section_associations:    true
@@ -26,7 +26,7 @@ resume_section_education:       true
 # resume_section_links:           true
 resume_section_outreach:        true
 resume_section_presentations:   true
-# resume_section_projects:       true
+resume_section_projects:       true
 resume_section_publications:    true
 resume_section_recognition:     true
 # resume_section_skills:         true
