--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,7 @@
 # Degree
-- degree: PhD Astronomy and Planetary Science
+- degree: Ph.D. Astronomy and Planetary Science
   uni: Northern Arizona University
   year: 2018 &mdash; present
-  summary: "Investigating the widespread nature of lunar voltiles at 3&mu;: implications for OH/H<sub>2</sub>O abundance."
-- degree: Hon. BSc. Planetary Science and Physics
+- degree: Hon. B.Sc. Planetary Science and Physics (Cum Laude)
   uni: University of Toronto
-  year: 2012 &mdash; 2017
-  summary: "Dating the lunar surface with remote sensing: insights from Optical Maturity and Rock Abundance."
+  year: 2017
