--- a/_data/outreach.yml
+++ b/_data/outreach.yml
@@ -1,20 +1,36 @@
 # Teaching and Outreach
-- company: NAU Department of Astronomy and Planetary Science
+
+- company: Dept. Astronomy and Planetary Science, NAU
+  position: Lab Instructor
+  duration: Spring 2021
+  summary: Developed and instructed labs for <i>AST181 - Introduction to Observational Astronomy</i>.
+
+- company: Dept. Astronomy and Planetary Science, NAU
+  position: Lab Curriculum Developer
+  duration: Spring 2021
+  summary: Developed labs for <i>AST201 - Introduction to Indigenous Astronomy</i>.
+
+- company: Unlearning Racism in Geoscience (URGE)
+  position: NAU DAPS URGE pod member
+  duration: Spring 2021
+  summary: Interfaced with deparment leadership, led discussions, and developed anti-racist policies to improve our department.
+
+- company: Northern Arizona University (NAU)
+  position: Louis Stokes Alliance for Minority Participation Mentor 
+  duration: Summer 2020
+  summary: Mentored an undergraduate performing her first literature review and preparing for graduate school.
+
+- company: Dept. Astronomy and Planetary Science, NAU
   position: Coding Instructor
-  duration: Fall 2019
+  duration: Fall 2018, 2019, 2020
   summary: Developed and taught <i>Scientific Programming In Real Life (SpIRL).</i> course.
 
-- company: Edwards Research Group
-  position: Coding Instructor
-  duration: Fall 2018
-  summary: Taught short course <i>Python and Git for reproducible Planetary Science.</i>
-
-- company: Solar System Exploration Group
+- company: Solar System Exploration Group, U of T
   position: Coding Instructor
   duration: Summer 2017
-  summary: Taught short course <i>Git for Reproducible Research.</i> 
+  summary: Taught short courses <i>Python for Planetary Science.</i> and <i>Git for Reproducible Research.</i> 
 
-- company: University of Toronto
+- company: University of Toronto (U of T)
   position: Co-organizer and lecturer
   duration: Fall 2016
-  summary: Co-organized <i>International Observe the Moon Night</i> public outreach event.
+  summary: Co-organized and gave a talk about space exploration at public <i>International Observe the Moon Night</i> outreach event.
