--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,9 +1,25 @@
 # Recognitions
 
+- award: Richard Hayes Memorial Scholarship
+  year: 2020
+  summary: Awarded in recognition of initiative to develop and teach a python class for the benefit of the Department of Astronomy and Planetary Science, NAU.
+
+- award: AESRC Best Presentation (Runner-up)
+  year: 2017
+  summary: Voted second best presentation at the 2017 Advances in Earth Sciences Research Conference, Western University.
+
+- award: University College Merit Award
+  year: 2017
+  summary: Awarded in recognition of graduating UC students who have made exceptional contributions to University College, University of Toronto.
+
 - award: NSERC Undergraduate Student Research Award
   year: 2016
-  summary: Awarded in support of research in dating the lunar surface with remote sensing data.
+  summary: Awarded to support research dating the lunar surface with orbital imagery.
 
-- award: Lunar and Planetary Institute (LPI) Summer Internship
+- award: Summer Internship, Lunar and Planetary Institute (LPI) 
   year: 2015
-  summary: Selective program partnered with NASA JSC. Funded research with Dr. G. Y. Kramer to investigate the formation of lunar swirls.
+  summary: Funded summer internship investigating the formation of lunar swirls at the Lunar and Planetary Institute, Houston, TX.
+
+- award: Arbor Scholarship, University of Toronto
+  year: 2012
+  summary: Four-year award supporting finalists of the University of Toronto National Scholarship Competition.
