--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,20 +1,26 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
-- project: SpIRL
-  role: Writer / Instructor
+- project: Roughness (coming soon)
+  role: Developer
+  duration: 2020 &mdash; Present
+  # url: "github.com/NAU-PIXEL/roughness"
+  description: Predict illumination on rough planetary surfaces.
+
+- project: Scientific Programming In Real Life (SPIRL)
+  role: Author / Instructor
   duration: 2019 &mdash; Present
   url: "cjtu.github.io/spirl"
-  description: Scientific Programming IRL is a free online textbook and short course by scientists, for scientists. 
+  description: Learn bash, Git, and Python interactively - completely free and open source.
+
+- project: Craterpy
+  role: Developer
+  duration: 2016 &mdash; Present
+  url: "github.com/cjtu/craterpy"
+  description: Impact crater data science in Python.
 
 - project: Plutopy
   role: Developer / Open source advocate
   duration: 2018
   url: "cjtu.github.io/blog"
-  description: Plutopy is an open source repository that makes Git collaboration accessible for scientists.
-
-- project: Craterpy
-  role: Developer
-  duration: 2016
-  url: "github.com/cjtu/craterpy"
-  description: Craterpy is a toolkit that simplifies planetary impact crater data science.
+  description: Learn Git and GitHub the hands-on way.
 
