--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,13 @@
 # Publications
+- title: 'The importance of Code of Conduct policies for conferences, mission teams, and research endeavors'
+  authors: 'S. Diniega, <b>C. Tai Udovicic</b>, C. Elder, J. Scully, J. Rathbun, A. Rutledge, J. Castillo-Rogez, I. Daubar, R. Pappalardo, C. Richey, M. Villarreal, M. Milazzo, T. Goudge, J. Filiberto, K. Bennett, J. Roberts'
+  journal: Planetary Decadal Survey White Paper
+  year: 2021
+
 - title: 'Lunar crater ejecta: Physical properties revealed by radar and thermal infrared observations'
   authors: 'R.R. Ghent, L.M. Carter, J.L. Bandfield, <b>C.J. Tai Udovicic</b>, B.A. Campbell'
   journal: Icarus
   volume: 273
   year: 2016
   pages: 182&ndash;195
+  doi: https://doi.org/10.1016/j.icarus.2015.12.014
