--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,3 +5,4 @@
 - degree: Hon. B.Sc. Planetary Science and Physics (Cum Laude)
   uni: University of Toronto
   year: 2017
+  summary: 'Thesis: Lunar Surface Maturity in Optical Maturity and Rock Abundance'
