--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,11 +1,19 @@
 # Publications
+- title: 'New Constraints on the Lunar Optical Space Weathering Rate'
+  authors: '<b>Tai Udovicic, C. J.</b>, E. S. Costello, R. R. Ghent, C. S. Edwards'
+  journal: Geophysical Research Letters
+  volume: 48
+  year: 2021
+  doi: https://doi.org/10.1029/2020GL092198
+  pdf: 'pdfs/Tai_Udovicic_et_al_2021.pdf'
+
 - title: 'The importance of Code of Conduct policies for conferences, mission teams, and research endeavors'
-  authors: 'S. Diniega, <b>C. Tai Udovicic</b>, C. Elder, J. Scully, J. Rathbun, A. Rutledge, J. Castillo-Rogez, I. Daubar, R. Pappalardo, C. Richey, M. Villarreal, M. Milazzo, T. Goudge, J. Filiberto, K. Bennett, J. Roberts'
+  authors: 'Diniega, S., <b>C. J. Tai Udovicic</b>, C. Elder, J. Scully, J. Rathbun, A. Rutledge, J. Castillo-Rogez, I. Daubar, R. Pappalardo, C. Richey, M. Villarreal, M. Milazzo, T. Goudge, J. Filiberto, K. Bennett, J. Roberts'
   journal: Planetary Decadal Survey White Paper
   year: 2021
 
 - title: 'Lunar crater ejecta: Physical properties revealed by radar and thermal infrared observations'
-  authors: 'R.R. Ghent, L.M. Carter, J.L. Bandfield, <b>C.J. Tai Udovicic</b>, B.A. Campbell'
+  authors: 'Ghent, R. R., L.M. Carter, J. L. Bandfield, <b>C. J. Tai Udovicic</b>, B. A. Campbell'
   journal: Icarus
   volume: 273
   year: 2016
