--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,5 +1,9 @@
 # Recognitions
 
+- award: Future Investigators in NASA Earth and Space Science and Technology (FINESST)
+  year: 2021-
+  summary: 'Selected grant: <i>"Constraining the Lunar Space Weathering Rate with Remote Observations"</i>'
+
 - award: Richard Hayes Memorial Scholarship
   year: 2020
   summary: Awarded in recognition of initiative to develop and teach a python class for the benefit of the Department of Astronomy and Planetary Science, NAU.
