--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -1,23 +1,37 @@
 # Presentations
+- title: 'Modeling the Effects of Basin Impacts and Ballistic Sedimentation on Ice in Lunar Cold Traps'
+  type: Talk
+  conference: 52nd Lunar and Planetary Science Conference (LPSC)
+  date: 2021
+  abstract: '#1528'
+  url: 'https://www.hou.usra.edu/meetings/lpsc2022/pdf/1528.pdf'
+
+- title: 'Predicting Emitted Radiance of Rough Lunar Surfaces to Inform Volatile Distribution'
+  type: Talk
+  conference: Geological Society of America (GSA)
+  date: 2021
+  abstract: '#108-7'
+  url: 'https://gsa.confex.com/gsa/2021AM/meetingapp.cgi/Paper/368619'
+
 - title: 'The lunar space weathering rate: dichotomies in agents and products'
   type: Poster
   conference: American Geophysical Union (AGU) Fall Meeting 
   date: 2020
-  abstract: '#P054-0007 '
+  abstract: '#P054-0007'
   url: 'https://agu.confex.com/agu/fm20/webprogram/Paper709298.html'
 
 - title: 'Testing Lunar Near-Infrared Corrections with Diviner Observations'
   type: Poster
   conference: 51st Lunar and Planetary Science Conference (LPSC)
   date: 2020
-  abstract: '#2632 '
+  abstract: '#2632'
   url: 'https://www.hou.usra.edu/meetings/lpsc2020/pdf/2632.pdf'
 
 - title: 'Validating a Lunar Roughness-Based Thermal Correction with Diviner Temperature Observations'
   type: Poster
   conference: American Geophysical Union (AGU) Fall Meeting 
   date: 2019
-  abstract: '#P33F-3500 '
+  abstract: '#P33F-3500'
   url: 'https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/562676'
   eposter: 'https://docs.google.com/viewer?url=https://agu.confex.com/agu/fm19/mediafile/Handout/Paper562676/TaiUdovicic_AGUPoster.pdf'
 
@@ -26,7 +40,7 @@
   type: Poster
   conference: 4th Planetary Data Workshop (PDW)
   date: 2019
-  abstract: '#7113 '
+  abstract: '#7113'
   url: 'https://www.hou.usra.edu/meetings/planetdata2019/pdf/7113.pdf'
   eposter: 'https://www.hou.usra.edu/meetings/planetdata2019/eposter/7113.pdf'
 
@@ -34,7 +48,7 @@
   type: Poster
   conference: 50th Lunar and Planetary Science Conference (LPSC)
   date: 2019
-  abstract: '#3218 '
+  abstract: '#3218'
   url: 'https://www.hou.usra.edu/meetings/lpsc2019/pdf/3218.pdf'
   eposter: 'https://www.hou.usra.edu/meetings/lpsc2019/eposter/3218.pdf'
 
@@ -47,12 +61,12 @@
   type: Poster
   conference: American Geophysical Union (AGU) Fall Meeting 
   date: 2016
-  abstract: '#P53C-2227 '
+  abstract: '#P53C-2227'
   url: 'https://agu.confex.com/agu/fm16/meetingapp.cgi/Paper/169655'
 
 - title: 'Applications of Solar Wind Particle Impact Simulations at Lunar Magnetic Anomalies to the Study of Lunar Swirls'
   type: Talk
   conference: 47th Lunar and Planetary Science Conference (LPSC)
   date: 2016
-  abstract: '#2648 '
+  abstract: '#2648'
   url: 'https://www.hou.usra.edu/meetings/lpsc2016/pdf/2648.pdf'
