--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,7 @@
 # Recognitions
+- award: Exploration Science Summer Intern, Lunar and Planetary Institute (LPI)
+  year: 2021
+  summary: 'Modeling ice stratigraphy below cold traps in support of the NASA Artemis program.'
 
 - award: Future Investigators in NASA Earth and Space Science and Technology (FINESST)
   year: 2021-
