--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -4,12 +4,12 @@
 - organization:
   role: Volunteer
   year: 2008 &mdash; Present
-  url: http://
+  url: https://
   summary:
 
 
 - organization:
   role:
   year: 1994 &mdash; Present
-  url: http://
+  url: https://
   summary:
