--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 # Jobs
 - company: ParseHub
   position: Software Developer Intern
-  duration: Nov, 2017 &mdash; May 2018
-  summary: Front-end development of web scraping tool.
+  duration: 2017 &mdash; 2018
+  summary: Front-end developer working with HTML/CSS/Javascript.
 
