--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,13 @@
 # Publications
+- title: 'Modeling the production of submicroscopic iron in the lunar highlands'
+  authors: 'Jordan, A. P., Shusterman, M. L., <b>C. J. Tai Udovicic, C. J.</b>'
+  journal: Icarus
+  volume: 387
+  year: 2022
+  pages: 115184
+  doi: https://doi.org/10.1016/j.icarus.2022.115184
+  pdf: 'pdfs/Jordan_et_al_2022_Icarus.pdf'
+
 - title: 'Spectral evidence for a pyroclastic mantle over the Tacquet formation and Menelaus domes of southwest Mare Serenitatis'
   authors: 'Farrand, W. H., C. S. Edwards, <b>C. J. Tai Udovicic, C. J.</b>'
   journal: Icarus
