--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,14 @@
 # Publications
+- title: 'Quantifying Sub-Meter Surface Heterogeneity on Mars Using Off-Axis Thermal Emission Imaging System (THEMIS) Data'
+  authors: 'McKeeby, B. E., Ramsey, M. S., <b>Tai Udovicic, C. J.</b>, Haberle, C. W., Edwards, C. S.'
+  journal: Earth and Space Science
+  volume: in press
+  year: 2022
+  doi: https://doi.org/10.1029/2022EA002430
+  pdf: 'pdfs/McKeeby_et_al_2022_preprint.pdf'
+
 - title: 'Modeling the production of submicroscopic iron in the lunar highlands'
-  authors: 'Jordan, A. P., Shusterman, M. L., <b>C. J. Tai Udovicic, C. J.</b>'
+  authors: 'Jordan, A. P., Shusterman, M. L., <b>Tai Udovicic, C. J.</b>'
   journal: Icarus
   volume: 387
   year: 2022
@@ -9,7 +17,7 @@
   pdf: 'pdfs/Jordan_et_al_2022_Icarus.pdf'
 
 - title: 'Spectral evidence for a pyroclastic mantle over the Tacquet formation and Menelaus domes of southwest Mare Serenitatis'
-  authors: 'Farrand, W. H., C. S. Edwards, <b>C. J. Tai Udovicic, C. J.</b>'
+  authors: 'Farrand, W. H., C. S. Edwards, <b>Tai Udovicic, C. J.</b>'
   journal: Icarus
   volume: 382
   year: 2022
