Update McKeeby pdf

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -5,7 +5,7 @@
   volume: in press
   year: 2022
   doi: https://doi.org/10.1029/2022EA002430
-  pdf: 'pdfs/McKeeby_et_al_2022_preprint.pdf'
+  pdf: 'pdfs/McKeeby_et_al_2022.pdf'
 
 - title: 'Modeling the production of submicroscopic iron in the lunar highlands'
   authors: 'Jordan, A. P., Shusterman, M. L., <b>Tai Udovicic, C. J.</b>'
