--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Christian J. Tai Udovicic | Planetary Scientist"
-description: "Christian J. Tai Udovicic is a Ph.D. candidate at Northern Arizona University."
+description: "Christian is a postdoc exploring the Moon at Northern Arizona University."
 
 # Build settings
 markdown: kramdown
@@ -11,17 +11,17 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Christian J. Tai Udovicic"
-resume_title:                   "PhD Candidate"
+resume_title:                   "Postdoctoral Scholar"
 resume_contact_email:           "cjtu@nau.edu"
 resume_contact_telephone:       "928-266-4451"
 resume_contact_address:         ""
 resume_header_contact_info:     ""
 resume_header_intro: >-
-    <p>I use orbital data to understand how the Moon evolves over time. 
-    I am passionate about open source reproducible research and social justice. 
-    Download pdfs of my <a href="#publications" itemprop="url">papers</a>, check out my online textbook 
-    <a href="https://cjtu.github.io/spirl" itemprop="url">Scientific Programming In Real Life (SPIRL)</a>, 
-    or my <a href="#projects" itemprop="url">GitHub projects</a> below.</p>
+    <p>I use orbital data and code to understand how the Moon changes over time. 
+    I am passionate about open source science and social justice. While you're here, you can
+    download pdfs of my <a href="#publications" itemprop="url">papers</a>, 
+    check out my free coding textbook <a href="https://cjtu.github.io/spirl" itemprop="url">SPIRL</a>, 
+    or see my current <a href="#projects" itemprop="url">GitHub projects</a>.</p>
 
 # Comment out unused sections
 # resume_section_associations:    true
