--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,9 @@
 # Degree
 - degree: Ph.D. Astronomy and Planetary Science
   uni: Northern Arizona University
-  year: 2018 &mdash; present
+  year: 2022
+  summary: >-
+    <a href="https://dissexpress.proquest.com/dxweb/doc/2761071803.html" itemprop="url">Diss.: Eau Claire de la Lune: Clarifying the Origin and Distribution of Water on the Moon</a>
 - degree: Hon. B.Sc. Planetary Science and Physics (Cum Laude)
   uni: University of Toronto
   year: 2017
