Add dissertation pdf

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,8 +2,8 @@
 - degree: Ph.D. Astronomy and Planetary Science
   uni: Northern Arizona University
   year: 2022
-  summary: >-
-    <a href="https://dissexpress.proquest.com/dxweb/doc/2761071803.html" itemprop="url">Diss.: Eau Claire de la Lune: Clarifying the Origin and Distribution of Water on the Moon</a>
+  summary: 'Diss.: Eau Claire de la Lune: Clarifying the Origin and Distribution of Water on the Moon'
+  pdf: pdfs/Tai_Udovicic_dissertation_2022.pdf
 - degree: Hon. B.Sc. Planetary Science and Physics (Cum Laude)
   uni: University of Toronto
   year: 2017
