Add 2023 accepted version pdf

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,13 @@
 # Publications
+- title: 'Buried Ice Deposits in Lunar Polar Cold Traps were Disrupted by Ballistic Sedimentation'
+  authors: '<b>Tai Udovicic, C. J.</b>, K. R. Frizzell, et al.'
+  journal: JGR Planets
+  volume: 128
+  year: 2023
+  pages: e2022JE007567
+  doi: https://doi.org/10.1029/2022JE007567
+  pdf: 'pdfs/Tai_Udovicic_et_al_2023_accepted.pdf'
+
 - title: 'Quantifying Sub-Meter Surface Heterogeneity on Mars Using Off-Axis Thermal Emission Imaging System (THEMIS) Data'
   authors: 'McKeeby, B. E., Ramsey, M. S., <b>Tai Udovicic, C. J.</b>, Haberle, C. W., Edwards, C. S.'
   journal: Earth and Space Science
